Always closing HTTP-connections